# Number-Guessing

./: README.md  meson.build  org.gnome.number_game.json
data/: meson.build  org.gnome.number_game.desktop.in  org.gnome.number_game.gschema.xml  org.gnome.number_game.metainfo.xml.in  org.gnome.number_game.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.vala  guesanumber.gresource.xml  main.vala  meson.build  window.cmb  window.ui  window.vala
